Trying to fix mobile whitespace issue v2

--- a/public/assets/css/app.scss
+++ b/public/assets/css/app.scss
@@ -20,7 +20,7 @@ body {
     height: 100%;
     margin: 0px;
     padding: 0px;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .active{
